# Photons-and-electrons-classification

./: .gitignore  README.md  lenet5.keras  main.py  pyproject.toml
components/: ParticleClassifier.py  ParticleDataPreprocessor.py  ParticleVisualizer.py  __init__.py
data/: DataDownloader.py
